Add degree to setup and italicize species name in examples

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -362,6 +362,10 @@ select {
   font-weight: bold;
 }
 
+.example i {
+  margin-right: 8px;
+}
+
 .example>a {
   color: white;
   font-weight: bold;
