--- a/client/src/index.css
+++ b/client/src/index.css
@@ -174,135 +174,32 @@ body {
   flex-wrap: nowrap;
 }
 
-/* Autocomplete */
-.not-found {
-  color: white;
-  font-weight: bold;
-}
-
-.no-autocomplete {
-  color: #999;
-  padding: 0px;
-}
-
-.protein-autocomplete {
-  border-top-width: 0;
-  list-style: none;
-  margin-top: 0;
-  max-height: 120px;
-  overflow-y: auto;
-  padding-left: 0px;
-  width: 150px;
-  margin-left: 0px;
-  pointer-events: auto;
-  z-index: 900;
-}
-
-.protein-autocomplete li {
-  padding: 8px;
-  background-color: rgba(0, 0, 0, 0.24);
-  border: none;
-  border-radius: 2px;
-  width: 125px;
-  overflow: auto;
-  z-index: 999;
-}
-
 .protein-input-container {
   margin-top: 1px;
-  position: relative;
-  width: 150px;
-  display: inline-block;
-  flex-wrap: nowrap;
-  height: 180px;
-  z-index: 999;
-  pointer-events: none;
-}
-
-.protein-input-container input {
+  margin-bottom: 16px;
   margin-right: 10px;
-  pointer-events: auto;
-  height: 24px;
-  min-height: 24px;
-  width: 125px;
-}
-
-.protein-autocomplete>.active,
-.protein-autocomplete li:hover {
-  background-color: rgba(0, 0, 0, 0.24);
-  cursor: pointer;
-  font-weight: 700;
-}
-
-.protein-autocomplete li:not(:last-of-type) {
-  border-bottom: 1px solid black;
-}
-
-.go-term-autocomplete {
-  border-top-width: 0;
-  list-style: none;
-  margin-top: 0;
-  max-height: 120px;
-  overflow-y: auto;
-  padding-left: 0px;
-  width: 250px;
-  margin-left: 0px;
-  pointer-events: auto;
-  z-index: 900;
-}
-
-.go-term-autocomplete li {
-  padding: 8px;
-  background-color: rgba(0, 0, 0, 0.24);
-  border: none;
-  border-radius: 2px;
-  width: 225px;
-  overflow: auto;
+  width: 150px;
+  color: black;
   z-index: 999;
 }
 
 .go-term-input-container {
   margin-top: 1px;
-  position: relative;
-  width: 250px;
-  display: inline-block;
-  flex-wrap: nowrap;
-  height: 180px;
-  z-index: 999;
-  pointer-events: none;
-}
-
-.go-term-input-container input {
+  margin-bottom: 16px;
   margin-right: 10px;
-  pointer-events: auto;
-  height: 24px;
-  min-height: 24px;
-  width: 225px;
-}
-
-.go-term-autocomplete>.active,
-.go-term-autocomplete li:hover {
-  background-color: rgba(0, 0, 0, 0.24);
-  cursor: pointer;
-  font-weight: 700;
-}
-
-.go-term-autocomplete li:not(:last-of-type) {
-  border-bottom: 1px solid black;
-}
-
-.autocomplete-dropdown {
-  position: absolute;
-  height: 90px;
-  max-height: 90px;
+  width: 250px;
+  z-index: 999;
 }
 
 .k-input {
   margin-top: 1px;
+  margin-bottom: 16px;
   width: 40px;
   height: 24px;
   min-height: 24px;
   text-align: center;
+  border-color: white;
+  pointer-events: auto;
 }
 
 input {
@@ -335,6 +232,7 @@ select {
 
 .search-button {
   margin-top: 1px;
+  margin-bottom: 16px;
   padding-left: 8px;
   padding-right: 8px;
   margin-right: 16px;
@@ -367,6 +265,10 @@ select {
   margin-left: 5px;
   text-decoration: underline;
   cursor: pointer;
+}
+
+.example i {
+  margin-right: 10px;
 }
 
 .guide-button {
@@ -1532,13 +1434,6 @@ select {
 .right-aligned-list {
   list-style: none;
   text-align: right;
-}
-
-.basic-single {
-  /* border: 2px solid black; */
-  background-color: rgb(113, 39, 113);
-  color: black;
-  width: 250px;
 }
 
 .testing-button {
