--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1482,3 +1482,75 @@ select {
   list-style: none;
   text-align: right;
 }
+
+.graph-stats-container {
+  margin-left: 30px;
+  margin-top: 20px;
+}
+
+.node-icon-container {
+  display: flex;
+  flex-direction: column;
+  width: 70px;
+  height: 5px;
+  margin-right: 20px;
+}
+
+.img-text-container1 {
+  display: flex;
+}
+
+.node-icon-container:hover {
+  display: block;
+}
+
+.edges-icon-container {
+  display: flex;
+  flex-direction: column;
+  width: 70px;
+  height: 5px;
+  margin-right: 20px;
+}
+
+.img-text-container2 {
+  display: flex;
+  margin-top: 20px;
+}
+
+.edges-icon-container:hover {
+  display: block;
+}
+
+.paths-icon-container {
+  display: flex;
+  flex-direction: column;
+  width: 70px;
+  height: 5px;
+  margin-right: 20px;
+}
+
+.img-text-container3 {
+  display: flex;
+  margin-top: 20px;
+}
+
+.paths-icon-container:hover {
+  display: block;
+}
+
+.degree-icon-container {
+  display: flex;
+  flex-direction: column;
+  width: 70px;
+  height: 55px;
+  margin-right: 20px;
+}
+
+.img-text-container4 {
+  display: flex;
+  margin-top: 20px;
+}
+
+.degree-icon-container:hover {
+  display: block;
+}
