clean up exports component

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -569,12 +569,20 @@ a.inactivated {
 
 .exports-container {
     text-align: center;
-    flex: 1;
+    margin-top: 8px;
 }
 
-.exports-container h5 {
-    margin-bottom: 8px;
-    margin-top: 0;
+.export {
+    color: black;
+    font-weight: bold;
+    text-decoration: underline;
+    cursor: pointer;
+    font-size: 0.8em;
+    margin-right: 24px;
+}
+
+.export:hover {
+    color: var(--reed-red);
 }
 
 .search {
@@ -744,17 +752,6 @@ h3,
 p {
     color: black;
     word-wrap: break-word;
-}
-
-.export {
-    color: black;
-    text-decoration: underline;
-    cursor: pointer;
-    font-size: 0.8em;
-}
-
-.export:hover {
-    color: var(--reed-red);
 }
 
 /* Query Error */
